--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
-    <title>Bighead Man Information Page</title>
-    <meta content="Bighead Man Information Page" property="og:title" />
-    <meta content="bighead man is very comedic if you don't think so i'll bury your mother alive in caustic soda" property="og:description" />
-    <meta content="https://brain.nicholasnukes.xyz" property="og:url" />
-    <meta content="https://brain.nicholasnukes.xyz/Resources/Images/bigHead.webp" property="og:image" />
-    <meta content="#0A8BF5" data-react-helmet="true" name="theme-color" />
+    <title>Zackerix II Fan Site</title>
+    <meta content="Zackerix II Fan Site" property="og:title" />
+    <meta content="i am the number one zackerix II fan i love him and his sexy ahh suit" property="og:description" />
+    <meta content="https://zackerix.nicholasnukes.xyz" property="og:url" />
+    <meta content="https://zackerix.nicholasnukes.xyz/Resources/Images/zackerix.png" property="og:image" />
+    <meta content="#1A1818" data-react-helmet="true" name="theme-color" />
+    <meta http-equiv='refresh' content='0; URL="Zackerix II Fan Site.html"'>
   </head>
 </html>
