--- a/Subpages/videos.html
+++ b/Subpages/videos.html
@@ -8,7 +8,7 @@
 		
 		<meta content="Zackerix II Fan Site" property="og:title" />
 		<meta content="i am the number one zackerix II fan i love him and his sexy ahh suit" property="og:description" />
-		<meta content="https://zackerix.nicholasnukes.xyz" property="og:url" />
+		<meta content="https://zackerix.nicholasnukes.xyz/Subpages/videos.html" property="og:url" />
 		<meta content="https://zackerix.nicholasnukes.xyz/Resources/Images/zackerix.png" property="og:image" />
     	<meta content="#1A1818" data-react-helmet="true" name="theme-color" />
 		
