--- a/Subpages/images.html
+++ b/Subpages/images.html
@@ -37,6 +37,16 @@
 			<p>Here is my collection of the ZCU images:</p>
 			<br>
 			<div style="position: relative; left: 25%;">
+				<img width="50%" src="../Resources/Images/raw/ZACK_BLAKE.png">
+				<img width="50%" src="../Resources/Images/raw/shark_1.png">
+				<img width="50%" src="../Resources/Images/raw/shark_2.png">
+				<img width="50%" src="../Resources/Images/raw/shark_3.png">
+				<img width="50%" src="../Resources/Images/raw/ZACK.png">
+				<img width="50%" src="../Resources/Images/raw/mother.png">
+				<img width="50%" src="../Resources/Images/raw/larry_wheel_chair.png">
+				<img width="50%" src="../Resources/Images/raw/larry_without_gun.png">
+				<img width="50%" src="../Resources/Images/raw/iphone guy.png">
+				<img width="50%" src="../Resources/Images/raw/kid_lol.png">
 				<img width="50%" src="../Resources/Images/raw/bodypillow.jpg">
 				<img width="50%" src="../Resources/Images/raw/boss.png">
 				<img width="50%" src="../Resources/Images/raw/chef.png">
