--- a/Subpages/videos.html
+++ b/Subpages/videos.html
@@ -75,6 +75,12 @@
 				<source src="../Resources/Videos/911.mp4" type="video/mp4">
 			</video>
 			<br>
+			<br>
+			<h1>President Tyler Bird Assassination</h1>
+			<br>
+			<video style="position: relative; left: 15%;" width="70%" poster="../Resources/Images/president.png" controls>
+				<source src="../Resources/Videos/president.mp4" type="video/mp4">
+			</video>
 		</div>
 		<div style="padding: 1%;"></div>
 		
